Fix WOW.js animations - add visibility hidden and configure offset

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /********** Template CSS **********/
 
+/* WOW.js - Hide elements until they animate */
+.wow {
+    visibility: hidden;
+}
+
 .back-to-top {
     position: fixed;
     display: none;
